### Fix 024
Porting lib and client to java 11